@@ -1,73 +1,74 @@
 package ru.practicum.explore_with_me.stats.client;
 
-import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Service;
-import org.springframework.web.client.HttpStatusCodeException;
-import org.springframework.web.client.RestTemplate;
+import org.springframework.stereotype.Component;
+import org.springframework.web.client.RestClient;
+import org.springframework.web.client.RestClientException;
 import ru.practicum.explore_with_me.stats.client.contracts.StatsClientInterface;
 import ru.practicum.explore_with_me.stats.dto.StatsGetRequestDto;
 import ru.practicum.explore_with_me.stats.dto.HitAddRequestDto;
 import ru.practicum.explore_with_me.stats.dto.HitStatDto;
 
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.List;
-import java.util.Map;
+import java.util.Optional;
 
-@Service
-@RequiredArgsConstructor
+@Component
 public class StatsClient implements StatsClientInterface {
 
     private static final String API_HIT = "/hit";
     private static final String API_STATS = "/stats";
 
-    @Autowired
-    private RestTemplate webClient;
+    private final RestClient client;
+
+    StatsClient(
+            RestClient client,
+            @Value("${app.stats-server.url}") String serverUri
+    ) {
+        this.client = client.mutate()
+                            .baseUrl(serverUri)
+                            .defaultHeader(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON_VALUE)
+                            .defaultHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+                            .build();
+    }
 
     @Override
     public void addHit(HitAddRequestDto dto) {
         try {
-            webClient.exchange(
-                    API_HIT,
-                    HttpMethod.POST,
-                    new HttpEntity<>(dto),
-                    Void.class
-            );
-        } catch (HttpStatusCodeException ignored) {
+            client.post()
+                  .uri(API_HIT)
+                  .body(dto)
+                  .retrieve()
+                  .toBodilessEntity();
+        } catch (RestClientException ignored) {
         }
     }
 
     @Override
     public List<HitStatDto> getStats(StatsGetRequestDto dto) {
-
-        StringBuilder url = new StringBuilder(API_STATS + "/?start={start}&end={end}&unique={unique}");
-        Map<String, Object> params = new HashMap<>();
-
-        params.put("start", dto.getStart());
-        params.put("end", dto.getEnd());
-        params.put("unique", dto.isUnique());
-
-        if (dto.getUris() != null && dto.getUris().length > 0) {
-            params.put("uris", dto.getUris());
-            url.append("&uris={uris}");
-        }
+        Optional<String[]> urisOptional = dto.getUris() != null && dto.getUris().length > 0
+                ? Optional.of(dto.getUris())
+                : Optional.empty();
 
         try {
-            ResponseEntity<List<HitStatDto>> response = webClient.exchange(
-                    url.toString(),
-                    HttpMethod.GET,
-                    new HttpEntity<>(null, null),
-                    new ParameterizedTypeReference<>() {},
-                    params
-            );
+            ResponseEntity<List<HitStatDto>> response = client.get()
+                                                              .uri(builder -> builder.path(API_STATS)
+                                                                                     .queryParam("start", dto.getStart())
+                                                                                     .queryParam("end", dto.getEnd())
+                                                                                     .queryParam("unique", dto.isUnique())
+                                                                                     .queryParamIfPresent("uris", urisOptional)
+                                                                                     .build()
+                                                              )
+                                                              .retrieve()
+                                                              .body(new ParameterizedTypeReference<>() {});
 
             return response.getBody();
-        } catch (HttpStatusCodeException e) {
-            return List.of();
+        } catch (RestClientException e) {
+            return Collections.emptyList();
         }
     }
 
